# DCA-Prac7

./: Makefile  config.h  promptsGPT.txt
Try1/StringUtilsProject/: CMakeLists.txt  Makefile  Makefile.in  config.status  configure  configure.ac  libtool
Try1/StringUtilsProject/Aclaraciones/: Aclaraciones.txt
Try1/StringUtilsProject/autom4te.cache/: requests  traces.0  traces.1  traces.2
Try1/StringUtilsProject/include/: StringUtils.hpp
Try1/StringUtilsProject/mine-check/: test.cpp
Try1/StringUtilsProject/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  libstringutils.la  libstringutils_la-StringUtils.lo
Try1/StringUtilsProject/src/.libs/: libstringutils.la  libstringutils.lai  libstringutils.so.0.0.0
Try1/StringUtilsProject/test/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  stringutils_tests_catch  test_palindrome  test_palindrome_boost  test_palindrome_boost.cpp  test_reverse  test_reverse_boost  test_reverse_boost.cpp  test_vowels  test_vowels.cpp  test_vowels_boost  test_vowels_boost.cpp
Try1/StringUtilsProject/test/.deps/: stringutils_tests_catch-test_palindrome.Po  test_palindrome-main.Po  test_palindrome_boost-test_palindrome_boost.Po  test_reverse-test_reverse.Po  test_reverse_boost-test_reverse_boost.Po  test_vowels_boost-test_vowels_boost.Po
autom4te.cache/: output.0  output.3  requests  traces.3
mine-check/: test
src/: StringUtils.cpp
src/.deps/: libstringutils_la-StringUtils.Plo
src/.libs/: libstringutils.so.0.0.0
test/: Makefile  Makefile.am  test_palindrome  test_palindrome.cpp  test_reverse  test_reverse.cpp  test_vowels.cpp
test/.deps/: stringutils_tests_catch-main.Po  stringutils_tests_catch-test_reverse.Po  stringutils_tests_catch-test_vowels.Po  test_palindrome-test_palindrome.Po  test_reverse-main.Po  test_vowels-main.Po  test_vowels-test_vowels.Po
